# nobd-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: discord-release-announce.yml
app/: Cargo.toml  build.rs
app/src/: app.rs  hid.rs  input.rs  install.rs  logo.rs  main.rs  monitor.rs  persist.rs  stats.rs  sync_service.rs  tray.rs
docs/: USAGE.md  driver-signing.md
docs/images/: README.md
docs/research/: graphify-evaluation.md
driver/nobd-hid-filter/: .gitignore  DESIGN.md  Driver.cpp  README.md  SyncWindow.h  nobd-hid-filter.inf  test_syncwindow.cpp
shared/: Cargo.toml
shared/src/: lib.rs  sync_window.rs
src/: config.rs  dinput_export.rs  dinput_hook.rs  exports.rs  lib.rs  log.rs  proxy.rs  sync_window.rs  xinput_hook.rs
vigem-sync/: Cargo.toml
vigem-sync/src/: main.rs
