[package]
name = "nobd-app"
version = "0.1.0"
edition = "2021"
description = "NOBD desktop — finger-gap tester + sync-window control panel"

[[bin]]
name = "nobd"
path = "src/main.rs"

[dependencies]
nobd-shared = { path = "../shared" }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
egui_plot = "0.34"
gilrs = "0.11"
tray-icon = "0.19"
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 2
strip = true
lto = true
