[package]
name = "nobd-app"
version = "0.3.0"
edition = "2021"
description = "NOBD desktop — finger-gap tester + sync-window control panel"

[[bin]]
name = "nobd"
path = "src/main.rs"

[dependencies]
nobd-shared = { path = "../shared" }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
gilrs = "0.11"
tray-icon = "0.19"
winreg = "0.52"
vigem-client = "0.1"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_XboxController",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Media",
    # Raw-HID input source: enumerate + open + read + decode HID gamepads.
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[build-dependencies]
ico = "0.3"
winresource = "0.1"
